Fix white gap between background image and footer #18

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     src: url(assets/fonts/DymoFontInvers.ttf);
 }
 
-/** {
+ /* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -16,6 +16,7 @@ body, html {
     padding: 0;
     height: 100%;
 }
+
 
 .v-center{
     align-self: center;
@@ -29,7 +30,7 @@ body, html {
 header {
     color: #d91010;
     background-color: black;
-    height: 25%;
+    height: 20vh;
     padding: 10px;
 	background: center 75% / cover no-repeat;
     background-image: url('assets/images/samuel-regan-asante-5j7nQv-jaVM-unsplash.jpg');
@@ -40,6 +41,7 @@ header {
 }
 
 nav {
+    height: 5vh;
     background-color: black;
     padding: 1rem;
     display: flex;
@@ -90,11 +92,13 @@ h1 {
 }
 
 main {
-    background-image: url('assets/images/adrian-korte-5gn2soeAc40-unsplash.jpg');
+    /*height: 55%;*/
+    height:60vh;
     background-size: cover;
     background-attachment: fixed;
-    position: relative; /* Ensure the fixed footer doesn't overlap content */
-    padding-bottom: 10%; /* Equal to footer height */
+    position: relative; 
+    padding-bottom: 5%; 
+    overflow: scroll;
 
     display: flex;
     justify-content: center;
@@ -123,8 +127,8 @@ p {
 }*/
 
 #main-paragraphs{
-    width: 400px;
-    height: 300px;
+    width: 300px;
+    height: 350px;
     margin-top: 50px;
     padding: 20px;
 }
@@ -151,6 +155,14 @@ p {
     /*background-image: url('assets/images/IMG_0172.jpeg');*/
     background-image: url('assets/images/adrian-korte-5gn2soeAc40-unsplash.jpg');
 }
+
+.bg_home{
+    /*background-image: url('assets/images/jack-hamilton-CMnNiQBkwBI-unsplash.jpg');*/
+    /*background-image: url('assets/images/IMG_0172.jpeg');*/
+    background-image: url('assets/images/adrian-korte-5gn2soeAc40-unsplash.jpg');
+}
+
+
 
 /*
 #record-bg {
@@ -190,6 +202,7 @@ p {
     justify-content: center;
     gap: 20px; 
     padding: 20px;
+    margin:auto
 }
 
 .artist_title{
@@ -293,6 +306,7 @@ p {
     gap: 20px; 
     padding: 20px;
     border:#d91010;
+    margin:auto;
 }
 
 .text-input {
@@ -318,7 +332,7 @@ p {
 /* */
 
 footer {
-    height: 10%;
+    height: 8vh;
     background-color: black;
     text-align: center;
     position: fixed;
